--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,10 +10,125 @@ header {
     color: #fff;
     padding: 1rem;
     margin-bottom: 100px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1000;
 }
 
 main {
     padding: 2rem;
+    margin-top: 120px; /* Ajusta este valor para que no se superponga el contenido inicial con el navbar */
+}
+
+/* Estilos para la barra de navegación */
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 1rem;
+}
+
+.logo img {
+    width: 200px;
+    height: auto;
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-links li {
+    margin-left: 2rem;
+}
+
+.nav-links a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+}
+
+.nav-links a:hover {
+    color: #35bd07;
+}
+
+/* Botón de toggle */
+.nav-toggle {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.nav-toggle .hamburger {
+    height: 2px;
+    width: 25px;
+    background: #fff;
+    border-radius: 5px;
+    position: relative;
+}
+
+.nav-toggle .hamburger::before,
+.nav-toggle .hamburger::after {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: inherit;
+    border-radius: inherit;
+    transition: transform 0.3s ease;
+}
+
+.nav-toggle .hamburger::before {
+    transform: translateY(-8px);
+}
+
+.nav-toggle .hamburger::after {
+    transform: translateY(8px);
+}
+
+/* Estilos responsivos */
+@media (max-width: 768px) {
+    .nav-links {
+        position: absolute;
+        right: 0;
+        top: 70px;
+        height: calc(100vh - 70px);
+        background: #333;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        transform: translateX(100%);
+        transition: transform 0.3s ease;
+        display: none; /* Ocultar inicialmente */
+    }
+
+    .nav-links.open {
+        display: flex; /* Mostrar cuando esté abierto */
+        transform: translateX(0);
+    }
+
+    .nav-links li {
+        margin: 2rem 0;
+    }
+
+    .nav-links a {
+        font-size: 1.5rem;
+    }
+
+    .nav-toggle {
+        display: flex;
+    }
+
+    .logo img {
+        width: 150px;
+    }
 }
 
 section {
@@ -406,7 +521,56 @@ footer {
     color: black;
     text-align: center;
     padding: 1rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
+
+footer a {
+    color: black;
+    text-decoration: none;
+    margin: 0.5rem;
+    font-size: 1rem; /* Ajusta el tamaño del texto */
+}
+
+footer a:hover {
+    color: #35bd07;
+}
+
+footer svg {
+    margin: 0.5rem;
+    width: 20px;
+    height: 20px;
+}
+
+footer p {
+    margin: 0.5rem;
+    font-size: 0.9rem; /* Ajusta el tamaño del texto */
+}
+
+/* Estilos responsivos */
+@media (max-width: 768px) {
+    footer {
+        flex-direction: column;
+        padding: 1rem 0.5rem;
+    }
+
+    footer a {
+        font-size: 0.9rem;
+    }
+
+    footer p {
+        font-size: 0.8rem;
+    }
+
+    footer svg {
+        width: 16px;
+        height: 16px;
+    }
+}
+
+
+
 
 /* Estilos responsive */
 @media (max-width: 768px) {
@@ -434,131 +598,5 @@ footer {
 
     .botonDest {
         padding: 0.5rem;
-    }
-}
-
-/* Estilos para la barra de navegación */
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 1rem;
-}
-
-.logo img {
-    width: 200px;
-    height: auto;
-}
-
-.nav-links {
-    list-style: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-}
-
-.nav-links li {
-    margin-left: 2rem;
-}
-
-.nav-links a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1rem;
-    transition: color 0.3s ease;
-}
-
-.nav-links a:hover {
-    color: #35bd07;
-}
-
-.nav-toggle {
-    display: none;
-    flex-direction: column;
-    cursor: pointer;
-}
-
-.nav-toggle .hamburger {
-    height: 2px;
-    width: 25px;
-    background: #fff;
-    border-radius: 5px;
-    position: relative;
-}
-
-.nav-toggle .hamburger::before,
-.nav-toggle .hamburger::after {
-    content: '';
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: inherit;
-    border-radius: inherit;
-    transition: transform 0.3s ease;
-}
-
-.nav-toggle .hamburger::before {
-    transform: translateY(-8px);
-}
-
-.nav-toggle .hamburger::after {
-    transform: translateY(8px);
-}
-
-@media (max-width: 768px) {
-    .sobreNosotros, .about-us p {
-        width: 90%;
-    }
-
-    .nav-links {
-        position: absolute;
-        right: 0;
-        top: 0;
-        height: 100vh;
-        background: black;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        transform: translateX(100%);
-        transition: transform 0.3s ease;
-        display: none;
-    }
-
-    .nav-links li {
-        margin: 2rem 0;
-    }
-
-    .nav-links a {
-        font-size: 1.5rem;
-    }
-
-    .nav-links.open {
-        display: flex;
-        transform: translateX(0);
-    }
-
-    .nav-toggle {
-        display: flex;
-    }
-
-    .mejoresCasinos1 img {
-        width: 100%;
-        height: auto;
-    }
-}
-
-@media (max-width: 480px) {
-    .nav-links a {
-        font-size: 1.2rem;
-    }
-
-    .nav-links li {
-        margin: 1.5rem 0;
-    }
-
-    .logo img {
-        width: 150px;
     }
 }
